--- a/style.css
+++ b/style.css
@@ -3,8 +3,52 @@ canvas {
   position: absolute;
 }
 
+body {
+  background-color: black;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
+}
+
+#custom-text {
+  font-family: Pretendard;
+  color: white;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  z-index: 100;
+
+  background-color: #1e1e1e;
+  padding: 4rem 6rem;
+  border-radius: 16px;
+
+  align-items: center;
+  justify-content: center;
+
+  gap: 40px;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+#text {
+  width: 600px;
+  height: 60px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  padding: 15px;
+  font-size: 16px;
+  color: #333;
+  background-color: #fff;
 }
